--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -145,6 +145,33 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".option2"
+            android:exported="true">
+            <!-- Intent filter for OptionsActivity -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".option3"
+            android:exported="true">
+            <!-- Intent filter for OptionsActivity -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".option4"
+            android:exported="true">
+            <!-- Intent filter for OptionsActivity -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
 
     </application>
 
