Added four options menu after clicking visualiza button

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -122,6 +122,49 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+        <activity android:name=".OptionsActivity"
+            android:exported="true">
+            <!-- Intent filter for OptionsActivity -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".option1"
+        android:exported="true">
+        <!-- Intent filter for OptionsActivity -->
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+    </activity>
+
+    <activity android:name=".option2"
+        android:exported="true">
+        <!-- Intent filter for OptionsActivity -->
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+    </activity>
+
+    <activity android:name=".option3"
+        android:exported="true">
+        <!-- Intent filter for OptionsActivity -->
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+    </activity>
+
+    <activity android:name=".option4"
+        android:exported="true">
+        <!-- Intent filter for OptionsActivity -->
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+    </activity>
 
     </application>
 
